Wonder 8 updates for framework archetype